Add ProcessorManager for unified processor management
Introduced the `ProcessorManager` to standardize the registration, creation, and retrieval of DSL processors. Default processors are now managed centrally, reducing duplication and improving extensibility. Updated all processors to include a generic `process` method and transitioned exception handling to `JsonDslException` for consistency.